Fix working directories of example server

--- a/examples/http_servers/simple-launch.yaml
+++ b/examples/http_servers/simple-launch.yaml
@@ -7,5 +7,6 @@ tasks:
   - name: http_server_2
     program: python.exe
     args: -m http.server 8101
+    cwd: ./server2
     start-delay: 1
     
