--- a/examples/http_servers/simple-launch.yaml
+++ b/examples/http_servers/simple-launch.yaml
@@ -2,11 +2,13 @@ name: example_http_servers
 tasks:
   - name: http_server_1
     program: python.exe
-    args: -m http.server 8100
-    cwd: ./server1
+    args: example_http_server.py 8100 Server1
+    cwd: .
   - name: http_server_2
     program: python.exe
-    args: -m http.server 8101
-    cwd: ./server2
+    args:
+      - example_http_server.py
+      - 8101
+      - Hello from Server2!
     start-delay: 1
     
