--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,15 @@ jobs:
     - name: test
       run: |
         python3 -m pytest -s
+  windows_test:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: pip
+      run: |
+        pip install .[test]
+        pip install git+https://github.com/johnwason/simple-launch-process.git
+    - name: test
+      run: |
+        python -m pytest -s
 
