--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,15 @@ jobs:
     - name: test
       run: |
         python -m pytest -s
+  macos_test:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: pip
+      run: |
+        python -m pip install .[test]
+        python -m pip install git+https://github.com/johnwason/simple-launch-process.git
+    - name: test
+      run: |
+        python -m pytest -s
 
