--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ license = {text = "Apache-2.0"}
 requires-python = ">=3.8"
 dependencies = [
     "pyyaml",
-    "appdirs"
+    "appdirs",
+    "simple-launch-process"
 ]
 readme = "README.md"
 
