--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         sudo apt-get install -y python3 python3-pip curl
     - name: pip
       run: |
-        pip3 install .[test]
+        python3 -m pip install .[test]
     - name: test
       run: |
         python3 -m pytest -s
