--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - name: apt
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3 python3-pip curl
+        sudo apt-get install -y python3 python3-pip curl python3-setuptools python3-wheel python3-pytest
     - name: pip
       run: |
         python3 -m pip install .[test]
