--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         sudo apt-get install -y python3 python3-pip curl python3-setuptools python3-wheel python3-pytest
     - name: pip
       run: |
+        python3 -m pip install --upgrade pip
         python3 -m pip install .[test]
     - name: test
       run: |
