--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,23 @@ on:
     
 jobs:
   ubuntu_test:
-    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        runs-on: [ubuntu-20.04, ubuntu-22.04]
+    runs-on: ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v3
     - name: apt
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3 python3-pip curl
+        sudo apt-get install -y python3 python3-pip curl python3-setuptools python3-wheel python3-pytest
     - name: pip
       run: |
-        pip3 install .[test]
+        python3 -m pip install --upgrade pip
+        python3 -m pip install .[test]
+    - name: allow cgroup
+      run : |
+        sudo chown -R $(id -un):$(id -gn) /sys/fs/cgroup/system.slice/runner-provisioner.service || true
     - name: test
       run: |
         python3 -m pytest -s
